# isaaclab-datagen-koch-extension

./: .gitignore  .gitmodules  MODIFICATION_LOG.md  README.md
configs/: cloud.defaults.yaml  cloud.user.example.yaml  local.defaults.yaml  local.user.example.yaml
isaaclab_env/my_custom_mimic_env/: __init__.py  mecanum_position_only_ik_keyboard.py  my_env_cfg.py  my_mimic_env.py  my_mimic_env_cfg.py  position_only_ik_keyboard.py
scripts/LeaderArmData2JSONL/: koch_master_arm_stream_device.py  record_demos_remote_master_arm.py  run_remote_master_arm_teleop.py
scripts/cloud/: annotate_koch_mimic_demos.py  generate_koch_mimic_dataset.py  record_koch_mimic_demos.py  replay_koch_mimic_demos.py  run_koch_mimic_teleop.py
scripts/local/: analyze_hdf5_dataset.py  debug_koch_leader_bus.py  stream_koch_leader_over_ssh.py  test_koch_leader_serial.py
scripts/ssh_device_scripts/: koch_hybrid_keyboard_master_arm_device.py  koch_master_arm_stream_device.py  koch_teleop_mode_utils.py  record_demos_remote_master_arm.py  run_remote_master_arm_teleop.py
source/koch_mimic/: pyproject.toml
source/koch_mimic/config/: extension.toml
source/koch_mimic/koch_mimic/: __init__.py
source/koch_mimic/koch_mimic/cloud/: __init__.py
source/koch_mimic/koch_mimic/cloud/devices/: __init__.py  hybrid_base_master_arm_device.py  master_arm_stream_device.py
source/koch_mimic/koch_mimic/cloud/recorders/: __init__.py  recorders.py  recorders_cfg.py
source/koch_mimic/koch_mimic/cloud/scripts/: __init__.py  _isaaclab_mimic_runner.py  annotate_koch_mimic_demos.py  generate_koch_mimic_dataset.py  mimic_action_compat.py  mimic_generation_compat.py  record_koch_mimic_demos.py  replay_koch_mimic_demos.py  run_koch_mimic_teleop.py  teleop_mode.py
source/koch_mimic/koch_mimic/cloud/tasks/: __init__.py
source/koch_mimic/koch_mimic/cloud/tasks/koch_pick_place/: __init__.py  env_cfg.py  latched_differential_ik_action.py  mecanum_position_only_keyboard_device.py  mimic_env.py  mimic_env_cfg.py
source/koch_mimic/koch_mimic/cloud/tasks/koch_pick_place/agents/: __init__.py
source/koch_mimic/koch_mimic/cloud/tasks/koch_pick_place/agents/robomimic/: bc_rnn_low_dim.json
source/koch_mimic/koch_mimic/local/: __init__.py
source/koch_mimic/koch_mimic/local/leader_arm/: __init__.py  configs.py  motors_bus.py
source/koch_mimic/koch_mimic/local/leader_arm/dynamixel/: dynamixel.py
source/koch_mimic/koch_mimic/local/scripts/: __init__.py  debug_koch_leader_bus.py  stream_koch_leader_over_ssh.py  test_koch_leader_serial.py
source/koch_mimic/koch_mimic/shared/: __init__.py  configuration.py  constants.py  joint_stream.py
(+3 files in other folders)
